<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fillViewport="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.android.justjava.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/clockIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/clock_icon"/>

            <TextView
                android:id="@+id/date1"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerHorizontal="true"
                android:text="15:15-15:30" />

            <TextView
                android:id="@+id/date2"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:text="28/03/2016" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test"
                android:onClick="update"
                android:layout_toRightOf="@id/clockIcon"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/wind" />

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/rt" />

            <TextView
                android:id="@+id/windRealTime"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="20dp"
                android:paddingStart="0dp"
                android:text="100 MW" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/da" />

            <TextView
                android:id="@+id/windDayAhead"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="20dp"
                android:paddingStart="0dp"
                android:text="100 MW" />

        </RelativeLayout>

        <View style="@style/Line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/sun" />

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/rt" />

            <TextView
                android:id="@+id/sunRealTime"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="20dp"
                android:paddingStart="0dp"
                android:text="100 MW" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/id" />

            <TextView
                android:id="@+id/sunIntraDay"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="20dp"
                android:paddingStart="0dp"
                android:text="100 MW" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/da" />

            <TextView
                android:id="@+id/sunDayAhead"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="20dp"
                android:paddingStart="0dp"

                android:text="100 MW" />

        </RelativeLayout>

        <View style="@style/Line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/balancing" />

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/nrv" />

            <TextView
                android:id="@+id/netRegulationVolume"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="20dp"
                android:paddingStart="0dp"
                android:text="100 MW" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/si" />

            <TextView
                android:id="@+id/systemImbalance"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="20dp"
                android:paddingStart="0dp"

                android:text="100 MW" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/mdp" />

            <TextView
                android:id="@+id/marginalDecrementalPrice"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:paddingStart="0dp"
                android:text="100 €/MWh" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/mip" />

            <TextView
                android:id="@+id/marginalIncrementalPrice"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:paddingStart="0dp"
                android:text="100 €/MWh" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/pos" />

            <TextView
                android:id="@+id/positivePrice"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:paddingStart="0dp"
                android:text="100 €/MWh" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/neg" />

            <TextView
                android:id="@+id/negativePrice"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:paddingStart="0dp"
                android:text="100 €/MWh" />

        </RelativeLayout>

        <View style="@style/Line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/disclaimer"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>

</ScrollView>



